--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next-intl": "^4.3.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "sass": "^1.92.1",
     "tsparticles": "^3.9.1",
     "zustand": "^4.4.4"
